--- a/reaction.html
+++ b/reaction.html
@@ -10,13 +10,13 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <style>
     body{
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-family: sans-serif', 'Gill Sans MT', monospace, 'Trebuchet MS', sans-serif;
     }
   </style>
 </head>
 <body>
 
-  <h2>Hruthik reaction timer</h2>
+  <h2>Hruthik Reddy Vadde reaction timer</h2>
   <br>
   <div class="container border" style="background-color: blue">
     <p  class="font-weight-normal" id="target"> Your time</p>
