made some changes

--- a/Treasure.html
+++ b/Treasure.html
@@ -17,7 +17,7 @@
     <p style="background-color:aqua; text-decoration: solid; font-size: large; font-style: oblique;"> Click on the chests to search for treasure</p>
     <p id="chests" style="color:lightblue; background-color: orange; font-style: inherit;">Number of chests checked is zero</p>
     <p id="score" style="color:lightpink; background-color: lightcyan; font-style: italic;">Score is unknown</p>
-    <p id="help" style="color:lightskyblue; background-color: lightgoldenrodyellow; text-align: start;"> Help report</p>   
+    <p id="help" style="color:lightskyblue; background-color: lightgoldenrodyellow; text-align: start;"> Help report</p>
     <div class="container"> 
       <div class="image-row d-flex">
           <div >
@@ -122,7 +122,7 @@
       img.src = "./treasureopen.jpg"
       }
       else
-      img.src = "./sademoji.png"        
+      img.src = "./sademoji.jpg"        
       chestCount++
       score = score+1
       document.getElementById("chests").innerHTML = "Number of chests checked is "+chestCount
